--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Sign In</h1>
+  <h1>User Sign In</h1>
   <form action="" method="post" nonvalidate>
     {{ form.hidden_tag() }}
     <p>
@@ -15,4 +15,7 @@
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p> {{ form.submit() }} </p>
   </form>
+
+<p>New user?<a href="{{ url_for('start_registration') }}">Click to register!</a></p>
+
 {% endblock %}
