--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
   <h1>Hello, {{ current_user.username }} </h1>
   <p>Your role is {{ current_user.role }}</p>
   {% for job in jobs %}
