--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,21 +1,15 @@
+
+
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block app_content %}
+    <h1>Login</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 
-{% block content %}
-  <h1>User Sign In</h1>
-  <form action="" method="post" nonvalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.username.label }} <br>
-        {{ form.username(size=32 )}}
-    </p>
-    <p>
-        {{ form.password.label }} <br>
-        {{ form.password(size=32) }}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p> {{ form.submit() }} </p>
-  </form>
-
-<p>New user?<a href="{{ url_for('start_registration') }}">Click to register!</a></p>
-
+    <br><br>
+    <a href="{{ url_for('start_registration') }}"> Register here!</a>
 {% endblock %}
