--- a/app/templates/registration/employer_registration.html
+++ b/app/templates/registration/employer_registration.html
@@ -1,35 +1,11 @@
 {% extends "base.html" %}
-{% block content %}
-<form method="POST">
-{{ form.hidden_tag() }}
-<p>
-  {{ form.company_name.label }}<br>
-  {{ form.company_name(size=32) }}<br>
-  {% for error in form.company_name.errors %}
-  <span style="color: red;">[{{ error }}]</span>
-  {% endfor %}
-</p>
-<p>
-  {{ form.state_of_incorporation.label }}<br>
-  {{ form.state_of_incorporation }}<br>
-  {% for error in form.state_of_incorporation.errors %}
-  <span style="color: red;">[{{ error }}]</span>
-  {% endfor %}
-</p>
-<p>
-  {{ form.company_type.label }} <br>
-  {{ form.company_type }} <br>
-  {% for error in form.company_type.errors %}
-  <span style="color: red;">[{{ error }}]</span>
-  {% endfor %}
-</p>
-<p>
-  {{ form.taxID.label }} <br>
-  {{ form.taxID(size=32) }}<br>
-  {% for error in form.taxID.errors %}
-  <span style="color: red;">[{{ error }}]</span>
-  {% endfor %}
-</p>
-<p>{{ form.submit() }}</p>
-</form>
+{% import 'bootstrap/wtf.html' as wtf %}
+
+{% block app_content %}
+    <h1>Register your company!</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 {% endblock %}
