--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     {% if title %}
           {{ title }}
     {% else %}
-          Welcome to PartnerUp
+          Welcome to StartupSolution
     {% endif %}
 {% endblock %}
 
@@ -20,7 +20,9 @@
             {% endif %}
 <a href="{{ url_for('jobs_available') }}">Jobs available</a>
 <a href="{{ url_for('freelancers_available' )}}">Freelancers available for hire</a>
+{% if current_user.is_authenticated %}
 <a href="{{ url_for('user', username=current_user.username) }}">User dashboard</a>
+{% endif %}
 </nav>
 {% endblock %}
 
