--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-  <h1>Hello, {{ current_user.username }} </h1>
-  <p>Your role is {{ current_user.role }}</p>
-  {% for job in jobs %}
-  <div>
-    <p>{{job.company.name}} has job for deadline<br>
-        <b> {{month}}/{{day}}/{{year}} </b>
-    </p>
-  </div>
-  {% endfor %}
+<div>
+
+<img src="/static/logo.png" width='444' height='150'>
+
+</div>
+{% if current_user.is_authenticated %}
+  <h3>Hello, {{ current_user.username }}! </h3>
+  {% if current_user.role == "Employer" %}
+  <p>You're an {{ current_user.role.lower() }} looking for freelancers and possibly future business partners.</p>
+  <p>Look for freelancers <a href="{{ url_for('freelancers_available')}}"">here</a></p>
+  {% elif current_user.role == "Freelancer" %}
+  <p>You're a frelancer looking for work and maybe some stake in a fresh startup!<p>
+  <p>Look for jobs <a href="{{ url_for('jobs_available')}}">here</a></p>
+  {% endif %}
+{% else %}
+<h3> Welcome to StartupSolution!</h3>
+<p>If you're an existing user, <a href="{{ url_for('login') }}">login here to continue.</a>
+  If not, <a href="{{ url_for('start_registration') }}">register here to get started</a>
+
+{% endif %}
 {% endblock %}
