--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,5 +11,9 @@
     </div>
 
     <br><br>
-    <a href="{{ url_for('start_registration') }}"> Register here!</a>
+
+<h4> Or alternatively, </h4>
+<h4><a href="{{ url_for('login_with_github')}}"><img src='/static/github.png' width='275' height='55'></a></h4>
+<h4><a href="{{ url_for('login_with_linkedin') }}"><img src='/static/Signin-with-LinkedIn.png' width='275' height='55'></a></h4><br>
+<p>Not already a user? <a href="{{ url_for('start_registration') }}"> Register here!</a></p>
 {% endblock %}
