--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -1,6 +1,34 @@
 {% extends "base.html" %}
 
 {% block app_content %}
+{% if current_user.avatar_data %}
+<table>
+  <tr valign="top">
+    <td><img src="{{ avatar_url }}" width=100 height=100></td>
+    <td><h4>{{ user.username }}</h4>
+      {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+      {% if user.last_seen %}<p>Last seen on: {{ user.last_seen.month }}/{{user.last_seen.day }}/{{user.last_seen.year }}</p>{% endif %}
+    </td>
+  </tr>
+</table>
+{% else %}
+<table>
+  <tr valign="top">
+    <td><img src="{{ user.avatar(128) }}"></td>
+    <td><h4>{{ user.username }}</h4>
+      {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+      {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+    </td>
+  </tr>
+</table>
+{% endif %}
+{% if current_user == user %}
+{% if no_profile_pic %}
+<a href="{{ url_for('upload_profile_pic') }}">Upload a profile pic</a>
+<br>
+{% endif %}
+<a href="{{ url_for('edit_profile') }}"> Edit Profile</a>
+
 <h4> Your current pending jobs </h4><hr>
 {% for job in jobs %}
           <p>Job title: {{ job.name }}<p>
@@ -11,5 +39,8 @@
 <p>No jobs assigned yet!
   Look for some here: <a href="{{ url_for('jobs_available')}}">Jobs Available</a>
 </p>
+{% endif %}
+{% else %}
+<p>Message user</p>
 {% endif %}
 {% endblock %}
