--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-{% if current_user.avatar_data %}
+{% if user.avatar_data %}
 <table>
   <tr valign="top">
     <td><img src="{{ avatar_url }}" width=100 height=100></td>
@@ -23,7 +23,7 @@
 </table>
 {% endif %}
 {% if current_user == user %}
-{% if no_profile_pic %}
+{% if not profile_pic %}
 <a href="{{ url_for('upload_profile_pic') }}">Upload a profile pic</a>
 <br>
 {% endif %}
@@ -31,10 +31,11 @@
 
 <h4> Your current pending jobs </h4><hr>
 {% for job in jobs %}
-          <p>Job title: {{ job.name }}<p>
-          <p>Startup: {{ job.company.company_name }}
+          <p>Job title: {{ job.name }}</p>
+          <p>Startup: {{ job.company.company_name }}</p>
           <hr>
 {% endfor %}
+
 {% if no_jobs %}
 <p>No jobs assigned yet!
   Look for some here: <a href="{{ url_for('jobs_available')}}">Jobs Available</a>
