--- a/app/templates/dashboards/jobs_available.html
+++ b/app/templates/dashboards/jobs_available.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block app_content %}
+{% block content %}
   <h3> Job's currently available </h3>
   {% for job in jobs %}
     <b><p>{{ job.name }}</p></b>
