--- a/app/templates/company/company.html
+++ b/app/templates/company/company.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
-{% block app_content %}
+{% block content %}
 
 <table>
 {% if company.logo_data %}
