--- a/app/templates/company/edit_company_profile.html
+++ b/app/templates/company/edit_company_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block app_content %}
+{% block content %}
     <h1>Edit Company Profile</h1>
     <div class="row">
         <div class="col-md-4">
