--- a/app/templates/company/new_job_listing.html
+++ b/app/templates/company/new_job_listing.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block app_content %}
+{% block content %}
 <h1>Add a new job listing</h1>
 <div class="row">
     <div class="col-md-4">
