--- a/app/templates/dashboards/freelancers_available.html
+++ b/app/templates/dashboards/freelancers_available.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block app_content %}
+{% block content %}
   <h3> Most recently active freelancers </h3>
   {% for freelancer in freelancers %}
   <table class="table table-hover">
