--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-
-{% block app_content %}
+{% block content %}
 <div>
 
 <img src="/static/logo.png" width='444' height='150'>
