--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,10 +2,10 @@
 
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block app_content %}
+{% block content %}
     <h1>Login</h1>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
             {{ wtf.quick_form(form) }}
         </div>
     </div>
