--- a/app/templates/dashboards/freelancers_available.html
+++ b/app/templates/dashboards/freelancers_available.html
@@ -26,16 +26,17 @@
           </td>
       </tr>
   </table>
+
   {% endfor %}
   <nav aria-label="...">
-       <ul class="pager">
+       <ul class="pagination">
            <li class="previous{% if not prev_url %} disabled{% endif %}">
-               <a href="{{ prev_url or '#' }}">
+               <a class="page-link" href="{{ prev_url or '#' }}">
                    <span aria-hidden="true">&larr;</span> More recently active
                </a>
            </li>
            <li class="next{% if not next_url %} disabled{% endif %}">
-               <a href="{{ next_url or '#' }}">
+               <a class="page-link" href="{{ next_url or '#' }}">
                   Less recently active <span aria-hidden="true">&rarr;</span>
                </a>
            </li>
