--- a/app/templates/dashboards/jobs_available.html
+++ b/app/templates/dashboards/jobs_available.html
@@ -7,14 +7,14 @@
   {% endfor %}
 
   <nav aria-label="...">
-       <ul class="pager">
+       <ul class="pagination">
            <li class="previous{% if not prev_url %} disabled{% endif %}">
-               <a href="{{ prev_url or '#' }}">
+               <a class="page-link" href="{{ prev_url or '#' }}">
                    <span aria-hidden="true">&larr;</span> Newer Listings
                </a>
            </li>
            <li class="next{% if not next_url %} disabled{% endif %}">
-               <a href="{{ next_url or '#' }}">
+               <a class="page-link" href="{{ next_url or '#' }}">
                    Older Listings <span aria-hidden="true">&rarr;</span>
                </a>
            </li>
