--- a/app/templates/dashboards/freelancers_available.html
+++ b/app/templates/dashboards/freelancers_available.html
@@ -1,33 +1,79 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container">
+  <br>
   <h3> Most recently active freelancers </h3>
-  {% for freelancer in freelancers %}
-  <table class="table table-hover">
-      <tr>
-          <td width="70px">
-            <h4><a href="{{url_for('user', username=freelancer.username)}}"></h4>
-                {% if freelancer.avatar_data %}
-                  <img src="{{freelancer.make_avatar_url() }}" height=64/>
-                {% else %}
-                <img src="{{ freelancer.avatar(64) }}"/>
-                {% endif %}
-
-          </td>
-          <td>
-              <a href="{{ url_for('user', username=freelancer.username) }}">
-                  {{ freelancer.username }}
-              </a>
-              <br>
-              {{ freelancer.occupation }}
-              <br>
-              {{ freelancer.about_me }}
-              <br>
-              Last seen on: {{ freelancer.last_seen.month }}/{{ freelancer.last_seen.day }}/{{ freelancer.last_seen.year }}
-          </td>
-      </tr>
-  </table>
-
+  <br>
+  <div class="card-deck">
+  {% for freelancer in freelancers[0:3] %}
+  <div class="row">
+      <div class="col-sm-6">
+        <div class="card" style="width: 15rem">
+      {% if freelancer.avatar_data %}
+      <img class="card-img-top" src="{{freelancer.make_avatar_url() }}" alt="Card image cap">
+      {% else %}
+      <img class="card-img-top" src="{{ freelancer.avatar(72) }}" alt="Card image cap">
+      {% endif %}
+      <div class="card-body">
+        <h5 class="card-title">{{ freelancer.first }} {{ freelancer.last }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ freelancer.occupation }}</h6>
+        <p class="card-text">{{ freelancer.about_me }}</p>
+        <p class="card-text"><small class="text-muted">{{ freelancer.last_seen_string() }}</small></p>
+        <a href="{{ url_for('user', username=freelancer.username) }}" class='btn btn-primary'> {{ freelancer.first }}'s profile </a>
+  </div>
+  </div>
+</div>
+</div>
   {% endfor %}
+  </div>
+<br>
+<br>
+<div class="card-deck">
+  {% for freelancer in freelancers[4:7] %}
+  <div class="row">
+      <div class="col-sm-6">
+  <div class="card" style="width: 15rem">
+      {% if freelancer.avatar_data %}
+  <img class="card-img-top" src="{{freelancer.make_avatar_url() }}" alt="Card image cap">
+      {% else %}
+  <img class="card-img-top" src="{{ freelancer.avatar(64) }}" alt="Card image cap">
+      {% endif %}
+  <div class="card-body">
+    <h5 class="card-title">{{ freelancer.first }} {{ freelancer.last }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{ freelancer.occupation }}</h6>
+    <p class="card-text">{{ freelancer.about_me }}</p>
+    <a href="{{ url_for('user', username=freelancer.username) }}" class='btn btn-primary'> {{ freelancer.first }}'s profile </a>
+  </div>
+  </div>
+</div>
+</div>
+  {% endfor %}
+  </div>
+<br>
+<br>
+  <div class="card-deck">
+  {% for freelancer in freelancers[6:10] %}
+  <div class="row">
+      <div class="col-sm-6">
+  <div class="card" style="width: 15rem">
+      {% if freelancer.avatar_data %}
+  <img class="card-img-top" src="{{freelancer.make_avatar_url() }}" alt="Card image cap">
+      {% else %}
+  <img class="card-img-top" src="{{ freelancer.avatar(64) }}" alt="Card image cap">
+      {% endif %}
+  <div class="card-body">
+    <h5 class="card-title">{{ freelancer.first }} {{ freelancer.last }}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{ freelancer.occupation }}</h6>
+    <p class="card-text">{{ freelancer.about_me }}</p>
+    <a href="{{ url_for('user', username=freelancer.username) }}" class='btn btn-primary'> {{ freelancer.first }}'s profile </a>
+  </div>
+  </div>
+</div>
+</div>
+  {% endfor %}
+  </div>
+  <br>
+
   <nav aria-label="...">
        <ul class="pagination">
            <li class="previous{% if not prev_url %} disabled{% endif %}">
@@ -42,4 +88,5 @@
            </li>
        </ul>
    </nav>
+  </div>
 {% endblock %}
