--- a/app/templates/dashboards/jobs_available.html
+++ b/app/templates/dashboards/jobs_available.html
@@ -1,10 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container">
+  <div class="row"><br></div>
+  <div class="row">
   <h3> Job's currently available </h3>
+  </div>
+  <div class="row"><br></div>
+  <table class="table table-hover">
   {% for job in jobs %}
+  <div class="row">
+  <tr>
+      <td width="70px">
     <b><p>{{ job.name }}</p></b>
-    <p> Posted by {{ job.company.company_name }}</p>
+      </td>
+    <td>
+    <p> Posted by <a href="{{url_for('company', company_name=job.company.company_name)}}">{{ job.company.company_name }}</p>
+    </td>
+  </tr>
+  </div>
   {% endfor %}
+  </table>
 
   <nav aria-label="...">
        <ul class="pagination">
@@ -20,4 +35,5 @@
            </li>
        </ul>
    </nav>
+  </div>
 {% endblock %}
