--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,24 +5,35 @@
 {% block content %}
 <div class="form-group col-md-6">
 <h3>Login</h3>
-</div>
+
 <form class="form form-horizontal" method="post" role="form">
   {{ form.hidden_tag() }}
   {{ wtf.form_errors(form, hiddens="only") }}
-<div class="form-group col-md-6">
+
   {{ wtf.form_field(form.username) }}
   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else unless you tell us to.</small>
-</div>
-<div class="form-group col-md-6">
+  <br>
   {{ wtf.form_field(form.password, form_type='password') }}
-</div>
+
 <br>
-<div class="form-group col-md-6">
+
 <button type="submit" class="btn btn-outline-primary btn-sm">
   {{ wtf.form_field(form.submit, form_type='submit')}}
 </button>
-</div>
+
 </form>
+<!--
+<h4> Or, coming soon... </h4>
+<a class="btn btn-sm btn-social btn-linkedin">
+  <span class="fa fa-linkedin"></span> Sign in with LinkedIn
+</a>
+<br>
+<br>
+<a class="btn btn-sm btn-social btn-github">
+  <span class="fa fa-github"></span>Sign in with Github
+</a>
+</div>
+-->
 <!--
 <h4> Or alternatively, </h4>
 
