--- a/app/templates/user/edit_profile.html
+++ b/app/templates/user/edit_profile.html
@@ -1,12 +1,18 @@
-{% extends "base.html" %}
+{% extends "user.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-    <h1>Edit Profile</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
-    <br>
+{% block usercontent %}
+<div class="form-group col-md-6">
+  <h1>Edit Profile</h1>
+<form class="form form-horizontal" method="post" role="form">
+  {{ form.hidden_tag() }}
+  {{ wtf.form_errors(form, hiddens="only") }}
+
+  {{ wtf.form_field(form.username) }}
+  <br>
+  {{ wtf.form_field(form.about_me, form_type="text")}}
+  <button type="submit" class="btn btn-outline-primary btn-sm">
+    {{ wtf.form_field(form.submit, form_type='submit')}}
+</button>
+  </form>
 {% endblock %}
