--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,6 @@
     {% endif %}
   </title>
 
-
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #1E90FF;">
   <a class="navbar-brand" href="{{ url_for('index') }}">
@@ -43,12 +42,12 @@
       {% endif %}
 <!----------------------------------------------------------->
 {% if current_user.is_authenticated %}
-{% if current_user.role == "Employer" %}
+{% if current_user.employer() %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dashboard
         </a>
-        {% with company_name = current_user.startup[0].company_name %}
+        {% with company_name = current_user.startup.first().company_name %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{{url_for('company', company_name=company_name)}}">Employer page</a>
           <a class="dropdown-item" href="{{url_for('new_job_posting', company_name=company_name)}}">Post a new job</a>
@@ -56,7 +55,7 @@
         {% endwith %}
       </div>
       </li>
-{% elif current_user.role == "Freelancer" %}
+{% elif current_user.freelancer() %}
 <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Dashboard
