--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,15 +3,17 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
+<div class="container">
+  <div class="row"><br></div>
 <div class="form-group col-md-6">
-<h3>Login</h3>
+<h3>{{_('Login')}}</h3>
 
 <form class="form form-horizontal" method="post" role="form">
   {{ form.hidden_tag() }}
   {{ wtf.form_errors(form, hiddens="only") }}
 
   {{ wtf.form_field(form.username) }}
-  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else unless you tell us to.</small>
+  <small id="emailHelp" class="form-text text-muted">{{ _("We'll never share your email with anyone else unless you tell us to.") }}</small>
   <br>
   {{ wtf.form_field(form.password, form_type='password') }}
 
@@ -35,10 +37,13 @@
 </div>
 -->
 <!--
-<h4> Or alternatively, </h4>
+<!-- <h4> Or alternatively, </h4>
 
 <h4><a href="{{ url_for('login_with_github')}}"><img src='/static/github.png' width='275' height='55'></a></h4>
-<h4><a href="{{ url_for('login_with_linkedin') }}"><img src='/static/Signin-with-LinkedIn.png' width='275' height='55'></a></h4><br>
-<p>Not already a user? <a href="{{ url_for('start_registration') }}"> Register here!</a></p>
--->
+<h4><a href="{{ url_for('login_with_linkedin') }}"><img src='/static/Signin-with-LinkedIn.png' width='275' height='55'></a></h4><br> -->
+<div class="row"><br></div>
+<p>{{ _('Not already a user?')}}
+  <p>set user link should have gone here<p>
+  <a href="{{ url_for('start_registration') }}"> {{_('Register here!')}}</a></p>
+</div>
 {% endblock %}
