--- a/app/templates/registration/employer_registration.html
+++ b/app/templates/registration/employer_registration.html
@@ -2,10 +2,22 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-    <h1>Register your company!</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
+    <div class="container">
+      <div class="row"><br></div>
+          <h3>Register your company</h3>
+          <form class="form form-horizontal" method="post" role="form" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
+            {{ wtf.form_errors(form, hiddens="only") }}
+            {{ wtf.form_field(form.company_name) }}
+            {{ wtf.form_field(form.state_of_incorporation) }}
+            {{ wtf.form_field(form.company_type )}}
+            {{ wtf.form_field(form.taxID )}}
+            {{ wtf.form_field(form.description )}}
+            <!-- THIS IS NOT WORKING -->
+            {{ wtf.form_field(form.logo)}}
+            <div class="row"><br></div>
+            <button type="submit" class="btn btn-outline-primary btn-sm">
+            {{ wtf.form_field(form.submit, form_type='submit')}}
+            </button>
     </div>
 {% endblock %}
