--- a/app/templates/registration/start_registration.html
+++ b/app/templates/registration/start_registration.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
-    <h1>Register</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-    </div>
+<div class="container">
+  <div class="row"><br></div>
+      <h3>Register</h3>
+      <form class="form form-horizontal" method="post" role="form">
+        {{ form.hidden_tag() }}
+        {{ wtf.form_errors(form, hiddens="only") }}
+        {{ wtf.form_field(form.username) }}
+        {{ wtf.form_field(form.email) }}
+        {{ wtf.form_field(form.password)}}
+        {{ wtf.form_field(form.repeat_password)}}
+        <button type="submit" class="btn btn-outline-primary btn-sm">
+        {{ wtf.form_field(form.submit, form_type='submit')}}
+        </button>
+</div>
 {% endblock %}
