--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,8 +17,8 @@
   <br>
   {{ wtf.form_field(form.password, form_type='password') }}
 
+{{ form.recaptcha }}
 <br>
-
 <button type="submit" class="btn btn-outline-primary btn-sm">
   {{ wtf.form_field(form.submit, form_type='submit')}}
 </button>
@@ -43,7 +43,6 @@
 <h4><a href="{{ url_for('login_with_linkedin') }}"><img src='/static/Signin-with-LinkedIn.png' width='275' height='55'></a></h4><br> -->
 <div class="row"><br></div>
 <p>{{ _('Not already a user?')}}
-  <p>set user link should have gone here<p>
   <a href="{{ url_for('start_registration') }}"> {{_('Register here!')}}</a></p>
 </div>
 {% endblock %}
